[project]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = [
    {name = "Renetr68",email = "rene.tresek@gmx.at"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pillow>=10.0.0",
    "pytest>=8.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
